--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "bootstrap": "^4.5.0",
     "jest-marbles": "^2.5.1",
     "jquery": "^3.5.1",
+    "karma-jasmine": "^4.0.1",
     "ngx-pagination": "^5.0.0",
+    "puppeteer": "^8.0.0",
     "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.7",
@@ -42,10 +43,14 @@
     "codelyzer": "^6.0.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.0.5",
+    "zone.js": "^0.11.4"
   },
   "jest": {
     "collectCoverageFrom": [
